# iris

./: .env.example  .gitignore  .kalos.yaml  BATCH4-WIRING-43.md  BATCH4-WIRING-45.md  BATCH4-WIRING-47.md  BATCH4-WIRING-53.md  BATCH4-WIRING-62.md  BATCH4-WIRING-65.md  BATCH5-WIRING-cc-suggestions.md  BATCH5-WIRING-compose-chat.md  BATCH5-WIRING-dlp.md  BATCH5-WIRING-markdown.md  BATCH5-WIRING-relationship-priority.md  BATCH5-WIRING-social-engineering.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_SECURITY.md  Dockerfile  README.md  docker-compose.yml
docs/: MASTER-FEATURE-LIST.md  SESSION-STATUS.md  breadboard.md  shaping.md  slices.md
migrations/: 001_initial.sql  002_chat.sql  003_agent.sql  004_ai_feedback.sql  005_job_queue.sql  006_dedup_messages.sql  007_attachments.sql  007_inbox_stats.sql  007_pending_sends.sql  007_snooze.sql  007_unsubscribe.sql  008_pending_sends.sql  009_signatures.sql  010_snooze.sql  011_attachments.sql  012_templates.sql  013_blocked_senders.sql  014_muted_threads.sql  015_saved_searches.sql  016_filter_rules.sql  017_aliases.sql  018_labels.sql  019_sentiment.sql  020_unsubscribe.sql  021_needs_reply.sql  022_contact_topics_cache.sql  023_thread_notes.sql  024_intent_detection.sql  025_deadlines.sql  026_vip_contacts.sql  027_followup_reminders.sql  028_relationship_priority.sql  029_social_engineering.sql  030_relationship_details.sql  031_draft_versions.sql  032_relationship_scores.sql  033_tracking_pixels.sql  034_archive_patterns.sql  035_newsletter_digests.sql  036_template_suggestions.sql  (+21 more)
src/: config.rs  lib.rs  main.rs  (+3 more)
(+1224 files in other folders)
